# ai-search-intelligence

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SETUP.md  pyproject.toml  requirements.txt
ai_search_intelligence/: __init__.py
ai_search_intelligence/analysis/: __init__.py  citation_parser.py  gap_identification.py  pattern_recognition.py
ai_search_intelligence/api/: __init__.py  analytics.py  main.py  reporting.py
ai_search_intelligence/core/: __init__.py  config.py
ai_search_intelligence/database/: __init__.py  models.py
ai_search_intelligence/engines/: __init__.py  google_serp.py  perplexity.py
n8n-workflows/: README.md  content-opportunity-alerts.json  daily-citation-collection.json  weekly-intelligence-report.json
